reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__knowledge_context.rs_line_1146_col_5_001.log

*** crates/tracewake-core/src/epistemics/knowledge_context.rs:1146:5: replace forbidden_sources -> BTreeSet<ForbiddenKnowledgeSource> with BTreeSet::from_iter([Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/epistemics/knowledge_context.rs
+++ replace forbidden_sources -> BTreeSet<ForbiddenKnowledgeSource> with BTreeSet::from_iter([Default::default()])
@@ -1138,23 +1138,17 @@
         AllowedKnowledgeSource::OwnSearchOrTouchObservation,
         AllowedKnowledgeSource::OwnSoundObservation,
         AllowedKnowledgeSource::OwnAbsenceMarker,
         AllowedKnowledgeSource::OwnSourceBackedBelief,
     ])
 }
 
 fn forbidden_sources() -> BTreeSet<ForbiddenKnowledgeSource> {
-    BTreeSet::from([
-        ForbiddenKnowledgeSource::UnobservedEventLogTruth,
-        ForbiddenKnowledgeSource::HiddenItemLocation,
-        ForbiddenKnowledgeSource::OtherActorsPrivateBeliefs,
-        ForbiddenKnowledgeSource::HumanDebugNotes,
-        ForbiddenKnowledgeSource::PreviousPossessedActorKnowledge,
-    ])
+    BTreeSet::from_iter([Default::default()]) /* ~ changed by cargo-mutants ~ */
 }
 
 fn baseline_embodied_provenance() -> Vec<KnowledgeProvenanceEntry> {
     vec![
         KnowledgeProvenanceEntry::actor_known_source(
             KnowledgeProvenanceKind::Perception,
             AllowedKnowledgeSource::OwnDirectObservation,
             "context_source_policy",


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/knowledge_context.rs` has changed (1781909126.383923757s, 6s after last build at 1781909120.431923754s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ForbiddenKnowledgeSource: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:1146:26
     |
1146 |     BTreeSet::from_iter([Default::default()]) /* ~ changed by cargo-mutants ~ */
     |                          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `ForbiddenKnowledgeSource`
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:53:1
     |
  53 | pub enum ForbiddenKnowledgeSource {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `knowledge_context::ForbiddenKnowledgeSource: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:1146:26
     |
1146 |     BTreeSet::from_iter([Default::default()]) /* ~ changed by cargo-mutants ~ */
     |                          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `knowledge_context::ForbiddenKnowledgeSource`
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:53:1
     |
  53 | pub enum ForbiddenKnowledgeSource {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
